# sourbbn-lib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DOCS.md  Doxyfile  README.md  multi_query_test  query_size_test  scratch_test
docs/html/: DOCS_8md_source.html  buckets_8cpp_source.html  classes.html  classsourbbn_1_1FieldSchema-members.html  classsourbbn_1_1Sourbbn_1_1sourbbn__impl.html  cptable_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  sourbbn_8cpp_source.html  structsourbbn_1_1BucketList.html  structsourbbn_1_1CPTable-members.html  structsourbbn_1_1CPTable__coll__graph.map  utils_8hpp_source.html
docs/html/search/: all_0.js  classes_4.js  pages_0.js
docs/latex/: annotated.tex  classsourbbn_1_1FieldSchema.tex  dir_ec6686bd6f223ed43d0ac1e718cb6c94.tex  index.tex  refman.tex  unionsourbbn_1_1FieldValue.tex
include/: sourbbn-lib.hpp
include/sourbbn/: buckets.hpp  cptable.hpp  sourbbn.hpp  utils.hpp
public/html/: annotated.html  buckets_8hpp_source.html  classsourbbn_1_1FieldSchema.html  classsourbbn_1_1RowSchema-members.html  classsourbbn_1_1RowSchema.html  classsourbbn_1_1RowValue-members.html  classsourbbn_1_1RowValue.html  classsourbbn_1_1Sourbbn-members.html  classsourbbn_1_1Sourbbn.html  classsourbbn_1_1Sourbbn_1_1sourbbn__impl-members.html  cptable_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ec6686bd6f223ed43d0ac1e718cb6c94.html  files.html  graph_legend.html  index.html  sourbbn_8hpp_source.html  structsourbbn_1_1Bucket-members.html  structsourbbn_1_1Bucket.html  structsourbbn_1_1BucketList-members.html  structsourbbn_1_1CPTable.html  structsourbbn_1_1CPTable__coll__graph.md5  unionsourbbn_1_1FieldValue-members.html  unionsourbbn_1_1FieldValue.html  utils_8cpp_source.html
public/html/search/: all_3.js  all_4.js  classes_1.js  classes_2.js  searchdata.js
public/latex/: classsourbbn_1_1RowSchema.tex  classsourbbn_1_1RowValue.tex  classsourbbn_1_1Sourbbn.tex  classsourbbn_1_1Sourbbn_1_1sourbbn__impl.tex  structsourbbn_1_1Bucket.tex  structsourbbn_1_1BucketList.tex  structsourbbn_1_1CPTable.tex  structsourbbn_1_1CPTable__coll__graph.md5
src/: buckets.cpp  cptable.cpp  sourbbn.cpp  utils.cpp
test/: multi_query_test.cpp  query_size_test.cpp  scratch_test.cpp  unit_tests.cpp
test/data/: diamond.sqlite  germany_disease_db.sqlite  germany_query_example.txt  oy1_diseases.sqlite  oy1_query_examples.txt
test/data/diamond_cptables/: a.csv  b.csv  c.csv  d.csv
test/data/oy1_data/: ABDM.csv  ALTR.csv  ANOR.csv  ASPL.csv  Age.csv  BACK.csv  CHST.csv  CNST.csv  CONC.csv  CONJ.csv  COUG.csv  CRAN.csv  DIZZ.csv  DRWS.csv  EDPO.csv  EDPR.csv  EMRA.csv  FEVR.csv  FOCL.csv  GIDS.csv  Gender.csv  HEAD.csv  HEAR.csv  HEPA.csv  JAUN.csv  JNTP.csv  LYMP.csv  MNNG.csv  MYLG.csv  OTHR.csv  RESP.csv  RLPS.csv  SPCH.csv  SPLN.csv  THRT.csv  ULCR.csv  URIN.csv  WEAK.csv  disease.csv  final_symptoms.csv  (+1 more)
